fix menu item heights and improve highlight contrast when hovering

--- a/styles/components.mainmenu.css
+++ b/styles/components.mainmenu.css
@@ -29,6 +29,17 @@
     max-height: 0;
     opacity: 0;
   }
+
+  .ifu-mainmenu__item {
+    @apply border-white border-s-5 border-e-5 text-body-small ps-8  hover:bg-gray-white;
+  }
+
+  .ifu-mainmenu__item--selected {}
+
+  .ifu-mainmenu__item--selected-hidden {}
+  .ifu-mainmenu__item--selected-secondary {}
+
+
   /*
 Accordion arrows are using absolute positioning so
 that they wont move sideways when scrollbar becomes visible
